logic & ui changes, pswd and wip translations

--- a/lib/presentation/i18n/ca/global.json
+++ b/lib/presentation/i18n/ca/global.json
@@ -4,16 +4,15 @@
     "confirm": "Confirmar",
     "cancel": "Cancel·lar",
     "youDoNotHaveInternet": "No tens internet",
-    "informationIsBeingLoadedIntoTheDatabase": "S'està carregant informació a la base de dades",
-    "imageUploadedSuccessfully": "Imatge pujada correctament",
-    "failedToLoadImage": "No s'ha pogut carregar la imatge",
     "accountCreatedOn": "Compte creat el",
     "changeUsername": "Canviar nom d'usuari",
     "newUsername": "Nou nom d'usuari",
     "changePassword": "Canviar contrasenya",
+    "logout":"Tancar sessió",
+    "sessionHasBeenClosed":"S'ha tancat la sessió",
     "deleteAccount": "Eliminar compte",
     "areYouSureYouWantToDeleteYourAccount": "Estàs segur que vols eliminar el teu compte?",
-    "yourDataWillBeDeletedButNotTheRoutesYouHaveCreatedHoweverTheyWillRemainAnonymousIfYouWantToDeleteThemPleaseDoItManually": "S'eliminarn les teves dades però no les vies que has creat. Tot i això, aquestes passaran a ser anònimes. Si vols eliminar-les, si us plau fes-ho manualment.",
+    "yourDataWillBeDeletedButNotTheRoutesYouHaveCreatedHoweverTheyWillRemainAnonymousIfYouWantToDeleteThemPleaseDoItManually": "S'eliminaran les teves dades però no les publicacions que has fet. Tot i això, aquestes passaran a ser anònimes. Si vols eliminar-les, si us plau fes-ho manualment o posa't en contacte amb nosaltres.",
     "theEnteredTextIsNotInEmailFormat": "El text introduït no té format de correu electrònic",
     "email": "Correu electrònic",
     "thePasswordMustHaveAMinimumOf6Characters": "La contrasenya ha de tenir mínim 6 caràcters",
