--- a/lib/presentation/i18n/es/global.json
+++ b/lib/presentation/i18n/es/global.json
@@ -4,16 +4,15 @@
     "confirm": "Confirmar",
     "cancel": "Cancelar",
     "youDoNotHaveInternet": "No tienes internet",
-    "informationIsBeingLoadedIntoTheDatabase": "Se está cargando información en la base de datos",
-    "imageUploadedSuccessfully": "Imagen subida correctamente",
-    "failedToLoadImage": "Error al cargar la imagen",
     "accountCreatedOn": "Cuenta creada el",
     "changeUsername": "Cambiar nombre de usuario",
     "newUsername": "Nuevo nombre de usuario",
     "changePassword": "Cambiar contraseña",
+    "logout":"Cerrar sesión",
+    "sessionHasBeenClosed":"Se ha cerrado la sesión",
     "deleteAccount": "Eliminar cuenta",
     "areYouSureYouWantToDeleteYourAccount": "¿Estás seguro/a que quieres eliminar tu cuenta?",
-    "yourDataWillBeDeletedButNotTheRoutesYouHaveCreatedHoweverTheyWillRemainAnonymousIfYouWantToDeleteThemPleaseDoItManually": "Se van a eliminar tus datos pero no las vías que has creado. Sin embargo, estas pasaran a ser anónimas. Si quieres eliminarlas, por favor hazlo manualmente.",
+    "yourDataWillBeDeletedButNotTheRoutesYouHaveCreatedHoweverTheyWillRemainAnonymousIfYouWantToDeleteThemPleaseDoItManually": "Se van a eliminar tus datos pero no las publicaciones que has hecho. Sin embargo, estas pasaran a ser anónimas. Si quieres eliminarlas, por favor hazlo manualmente o ponte en contacto con nosotros.",
     "theEnteredTextIsNotInEmailFormat": "El texto introducido no tiene formato de correo electrónico",
     "email": "Correo electrónico",
     "thePasswordMustHaveAMinimumOf6Characters": "La contraseña debe de tener mínimo 6 carácteres",
