--- a/lib/presentation/i18n/en/global.json
+++ b/lib/presentation/i18n/en/global.json
@@ -4,16 +4,15 @@
     "confirm": "Confirm",
     "cancel": "Cancel",
     "youDoNotHaveInternet": "You do not have Internet",
-    "informationIsBeingLoadedIntoTheDatabase": "Information is being loaded into the database",
-    "imageUploadedSuccessfully": "Image uploaded successfully",
-    "failedToLoadImage": "Failed to load image",
     "accountCreatedOn": "Account created on",
     "changeUsername": "Change username",
     "newUsername": "New username",
     "changePassword": "Change password",
+    "logout":"Logout",
+    "sessionHasBeenClosed":"Session has been closed",
     "deleteAccount": "Delete account",
     "areYouSureYouWantToDeleteYourAccount": "Are you sure you want to delete your account?",
-    "yourDataWillBeDeletedButNotTheRoutesYouHaveCreatedHoweverTheyWillRemainAnonymousIfYouWantToDeleteThemPleaseDoItManually": "Your data will be deleted but not the routes you have created. However, they will remain anonymous. If you want to delete them, please do it manually.",
+    "yourDataWillBeDeletedButNotTheRoutesYouHaveCreatedHoweverTheyWillRemainAnonymousIfYouWantToDeleteThemPleaseDoItManually": "Your data will be deleted but not the publications you have made. However, these will become anonymous. If you want to delete them, please do it manually or contact us",
     "theEnteredTextIsNotInEmailFormat": "The entered text is not in email format",
     "email": "Email",
     "thePasswordMustHaveAMinimumOf6Characters": "The password must have a minimum of 6 characters",
