--- a/lib/presentation/i18n/ca/global.json
+++ b/lib/presentation/i18n/ca/global.json
@@ -26,5 +26,67 @@
     "close": "Tancar",
     "login":"Iniciar sessió",
     "theFieldCannotbeEmpty": "El camp no pot estar buit",
-    "myProfile":"El meu perfil"
+    "myProfile":"El meu perfil",
+    "profile": "Perfil",
+    "saved": "Guardats",
+    "shareNewEvent": "Comparteix nou esdeveniment",
+    "pendingApproval": "Pendent d'aprovació",
+    "deletePost": "Suprimeix la publicació",
+    "areYouSureYouWantToDeleteThisPost": "Estàs segur que vols suprimir aquesta publicació?",
+    "postedBy": "Publicat per",
+    "editPost": "Edita la publicació",
+    "connectToANetwork": "Connecteu-vos a una xarxa",
+    "registerAndLogInToBeAbleToShareEventsAndToEditYourProfile": "Registreu-vos i inicieu sessió per poder compartir esdeveniments i editar el vostre perfil",
+    "accountSuccessfullyRegistered": "El compte s'ha registrat correctament",
+    "enterYourEmailAndWeWillSendYouALinkToRecoverYourPassword": "Introdueix el teu correu electrònic i t'enviarem un enllaç per recuperar la teva contrasenya",
+    "theLinkToChangeYourAccountPasswordHasBeenSentIfYouDoNotReceiveItCheckYourSpamFolder": "S'ha enviat l'enllaç per canviar la contrasenya del vostre compte. Si no el reps, comprova la teva carpeta de correu brossa.",
+    "sendEmail": "Envia un correu electrònic",
+    "searchByEventOrArtist": "Cerca per esdeveniment o artista",
+    "filterPosts": "Filtra les publicacions",
+    "orderBy": "Ordenat per",
+    "filterByDate": "Filtra per data",
+    "today": "Avui",
+    "tomorrow": "Demà",
+    "theDayAfterTomorrow": "Demà passat",
+    "addDate": "Afegeix data",
+    "resetFilters": "Restableix els filtres",
+    "refresh":"Actualitzar",
+    "post":"Publicar",
+    "youHaveNoSavedPosts":"No tens cap publicació guardada",
+    "location":"Ubicació",
+    "theFieldCannotHaveMoreThanXCharacters":"El camp no pot contenir més de {{maxCharacters}} caràcters",
+    "description":"Descripció",
+    "thePostHasBeenSentForReviewToBeApproved":"S'ha enviat la publicació a revisió per ser aprovada",
+    "thePostCouldNotBeSentSuccessfully":"No s'ha pogut enviar la publicació amb èxit",
+    "youHaveToSelectAnImage":"Has de seleccionar una imatge",
+    "creationDate":"Data de creació",
+    "eventDate":"Data inicial de l'esdeveniment",
+    "name":"Nom",
+    "theAccountHasBeenSuccessfullyDeleted":"The account has been successfully deleted",
+    "selectImage":"Seleccionar imatge",
+    "changeImage":"Canviar imatge",
+    "weakPassword":"Contrasenya massa dèbil",
+    "thereIsAlreadyAnAccountThatUsesThisEmail":"Ja existeix un compte que utilitza aquest correu electrònic",
+    "thisUserDoesNotExist":"Aquest nom d'usuari no existeis",
+    "wrongPassword":"Contrasenya incorrecta",
+    "authentiactionError":"Error d'autenticació",
+    "january":"gener",
+    "february":"febrer",
+    "march":"març",
+    "april":"abril",
+    "may":"maig",
+    "june":"juny",
+    "july":"juliol",
+    "august":"agost",
+    "september":"setembre",
+    "october":"octubre",
+    "november":"novembre",
+    "december":"desembre",
+    "monday":"Dilluns",
+    "tuesday":"Dimarts",
+    "wednesday":"Dimecres",
+    "thursday":"Dijous",
+    "friday":"Divendres",
+    "saturday":"Dissabte",
+    "sunday":"Diumenge"
 }
