--- a/lib/presentation/i18n/en/global.json
+++ b/lib/presentation/i18n/en/global.json
@@ -12,7 +12,7 @@
     "sessionHasBeenClosed":"Session has been closed",
     "deleteAccount": "Delete account",
     "areYouSureYouWantToDeleteYourAccount": "Are you sure you want to delete your account?",
-    "yourDataWillBeDeletedButNotTheRoutesYouHaveCreatedHoweverTheyWillRemainAnonymousIfYouWantToDeleteThemPleaseDoItManually": "Your data will be deleted but not the publications you have made. However, these will become anonymous. If you want to delete them, please do it manually or contact us",
+    "yourDataWillBeDeletedButNotTheRoutesYouHaveCreatedHoweverTheyWillRemainAnonymousIfYouWantToDeleteThemPleaseDoItManually": "Your data will be deleted but not the publications you have made. However, these will become anonymous. If you want to delete them, please do it manually or contact us.",
     "theEnteredTextIsNotInEmailFormat": "The entered text is not in email format",
     "email": "Email",
     "thePasswordMustHaveAMinimumOf6Characters": "The password must have a minimum of 6 characters",
@@ -26,5 +26,67 @@
     "close": "Close",
     "login":"Login",
     "theFieldCannotbeEmpty": "The field cannot be empty",
-    "myProfile":"My profile"
+    "myProfile":"My profile",
+    "profile": "Profile",
+    "saved": "Saved",
+    "shareNewEvent": "Share new event",
+    "pendingApproval": "Pending approval",
+    "deletePost": "Delete post",
+    "areYouSureYouWantToDeleteThisPost": "Are you sure you want to delete this post?",
+    "postedBy": "Posted by",
+    "editPost": "Edit post",
+    "connectToANetwork": "Connect to a network",
+    "registerAndLogInToBeAbleToShareEventsAndToEditYourProfile": "Register and log in to be able to share events and to edit your profile",
+    "accountSuccessfullyRegistered": "Account successfully registered",
+    "enterYourEmailAndWeWillSendYouALinkToRecoverYourPassword": "Enter your email and we will send you a link to recover your password",
+    "theLinkToChangeYourAccountPasswordHasBeenSentIfYouDoNotReceiveItCheckYourSpamFolder": "The link to change your account password has been sent. If you do not receive it, check your spam folder",
+    "sendEmail": "Send email",
+    "searchByEventOrArtist": "Search by event or artist",
+    "filterPosts": "Filter posts",
+    "orderBy": "Order by",
+    "filterByDate": "Filter by date",
+    "today": "Today",
+    "tomorrow": "Tomorrow",
+    "theDayAfterTomorrow": "The day after tomorrow",
+    "addDate": "Add date",
+    "resetFilters": "Reset filters",
+    "refresh":"Refresh",
+    "post":"Post",
+    "youHaveNoSavedPosts":"You have no saved posts",
+    "location":"Location",
+    "theFieldCannotHaveMoreThanXCharacters":"The field cannot have more than {{maxCharacters}} characters",
+    "description":"Description",
+    "thePostHasBeenSentForReviewToBeApproved":"The post has been sent for review to be approved",
+    "thePostCouldNotBeSentSuccessfully":"The post could not be sent successfully",
+    "youHaveToSelectAnImage":"You have to select an image",
+    "creationDate":"Creation date",
+    "eventDate":"The start date of the event",
+    "name":"Name",
+    "theAccountHasBeenSuccessfullyDeleted":"The account has been successfully deleted",
+    "selectImage":"Select image",
+    "changeImage":"Change image",
+    "weakPassword":"Password too weak",
+    "thereIsAlreadyAnAccountThatUsesThisEmail":"There is already an account that uses this email",
+    "thisUserDoesNotExist":"This user does not exist",
+    "wrongPassword":"Wrong Password",
+    "authentiactionError":"Authentication error",
+    "january":"January",
+    "february":"February",
+    "march":"March",
+    "april":"April",
+    "may":"May",
+    "june":"June",
+    "july":"July",
+    "august":"August",
+    "september":"September",
+    "october":"October",
+    "november":"November",
+    "december":"December",
+    "monday":"Monday",
+    "tuesday":"Tuesday",
+    "wednesday":"Wednesday",
+    "thursday":"Thursday",
+    "friday":"Friday",
+    "saturday":"Saturday",
+    "sunday":"Sunday"
 }
