--- a/lib/presentation/i18n/es/global.json
+++ b/lib/presentation/i18n/es/global.json
@@ -26,5 +26,67 @@
     "close": "Cerrar",
     "login":"Iniciar sesión",
     "theFieldCannotbeEmpty": "El campo no puede estar vacío",
-    "myProfile":"Mi perfil"
+    "myProfile":"Mi perfil",
+    "profile": "Perfil",
+    "saved": "Guardados",
+    "shareNewEvent": "Compartir nuevo evento",
+    "pendingApproval": "Aprobación pendiente",
+    "deletePost": "Eliminar publicación",
+    "areYouSureYouWantToDeleteThisPost": "¿Estás seguro de que deseas eliminar esta publicación?",
+    "postedBy": "Publicado por",
+    "editPost": "Editar publicación",
+    "connectToANetwork": "Conéctate a una red",
+    "registerAndLogInToBeAbleToShareEventsAndToEditYourProfile": "Regístrate e inicia sesión para poder compartir eventos y editar tu perfil",
+    "accountSuccessfullyRegistered": "Cuenta registrada exitosamente",
+    "enterYourEmailAndWeWillSendYouALinkToRecoverYourPassword": "Introduce tu correo electrónico y te enviaremos un enlace para recuperar tu contraseña",
+    "theLinkToChangeYourAccountPasswordHasBeenSentIfYouDoNotReceiveItCheckYourSpamFolder": "Se ha enviado el enlace para cambiar la contraseña de su cuenta. Si no lo recibes, revisa tu carpeta de spam.",
+    "sendEmail": "Enviar correo electrónico",
+    "searchByEventOrArtist": "Buscar por evento o artista",
+    "filterPosts": "Filtrar publicaciones",
+    "orderBy": "Ordenar por",
+    "filterByDate": "Filtrar por fecha",
+    "today": "Hoy",
+    "tomorrow": "Mañana",
+    "theDayAfterTomorrow": "Pasado mañana",
+    "addDate": "Agregar fecha",
+    "resetFilters": "Restablecer filtros",
+    "refresh":"Actualizar",
+    "post":"Publicar",
+    "youHaveNoSavedPosts":"No tienes ninguna publicación guardada",
+    "location":"Ubicación",
+    "theFieldCannotHaveMoreThanXCharacters":"El campo no puede tener más de {{maxCharacters}} carácteres",
+    "description":"Descripción",
+    "thePostHasBeenSentForReviewToBeApproved":"Se ha mandado la publicación a revisión para ser aprobada",
+    "thePostCouldNotBeSentSuccessfully":"No se ha podido enviar la publicación con éxito",
+    "youHaveToSelectAnImage":"Tienes que seleccionar una imagen",
+    "creationDate":"Fecha de creación",
+    "eventDate":"Fecha inicial del evento",
+    "name":"Nombre",
+    "theAccountHasBeenSuccessfullyDeleted":"The account has been successfully deleted",
+    "selectImage":"Seleccionar imagen",
+    "changeImage":"Cambiar imagen",
+    "weakPassword":"Contraseña demasiado débil",
+    "thereIsAlreadyAnAccountThatUsesThisEmail":"Ya existe una cuenta con este correo electrónico",
+    "thisUserDoesNotExist":"Este usuario no existe",
+    "wrongPassword":"Contraseña incorrecta",
+    "authentiactionError":"Error de autenticación",
+    "january":"enero",
+    "february":"febrero",
+    "march":"marzo",
+    "april":"abril",
+    "may":"mayo",
+    "june":"junio",
+    "july":"julio",
+    "august":"agosto",
+    "september":"septiembre",
+    "october":"octubre",
+    "november":"noviembre",
+    "december":"diciemrbe",
+    "monday":"Lunes",
+    "tuesday":"Martes",
+    "wednesday":"Miércoles",
+    "thursday":"Jueves",
+    "friday":"Viernes",
+    "saturday":"Sábado",
+    "sunday":"Domingo"
 }
