auth ui improved & info view

--- a/lib/presentation/i18n/ca/global.json
+++ b/lib/presentation/i18n/ca/global.json
@@ -88,5 +88,6 @@
     "thursday":"Dijous",
     "friday":"Divendres",
     "saturday":"Dissabte",
-    "sunday":"Diumenge"
+    "sunday":"Diumenge",
+    "info":"Informació"
 }
