--- a/lib/presentation/i18n/es/global.json
+++ b/lib/presentation/i18n/es/global.json
@@ -88,5 +88,6 @@
     "thursday":"Jueves",
     "friday":"Viernes",
     "saturday":"Sábado",
-    "sunday":"Domingo"
+    "sunday":"Domingo",
+    "info":"Información"
 }
