--- a/lib/presentation/i18n/en/global.json
+++ b/lib/presentation/i18n/en/global.json
@@ -88,5 +88,6 @@
     "thursday":"Thursday",
     "friday":"Friday",
     "saturday":"Saturday",
-    "sunday":"Sunday"
+    "sunday":"Sunday",
+    "info":"Information"
 }
